@@ -4,9 +4,9 @@ DESCRIPTION=C++ JSON reader and writer
 EAPI=5
 HOMEPAGE=https://github.com/open-source-parsers/jsoncpp
 IUSE=doc test
-KEYWORDS=~amd64 ~arm ~arm64 ~hppa ~mips ~ppc64 ~x86
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~mips ~ppc64 ~x86
 LICENSE=|| ( public-domain MIT )
 SLOT=0
 SRC_URI=https://github.com/open-source-parsers/jsoncpp/archive/0.10.2.tar.gz -> jsoncpp-0.10.2.tar.gz
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=2e53c4a42a11d7ad7967eaeb868b8096
+_md5_=6eeaa27a63e21b7a8e79471e317175ae
